src/test/wacc/invalid/syntaxErr/literals/stringLiteralNoNewlines.wacc
# Strings cannot be split across lines

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    string s = "hello
 world"
end
